[tool.poetry]
name = "colores"
version = "0.1.1"
description = "A Wrapper for Colorama"
authors = ["Eliaz Bobadilla <eliaz.bobadilladev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pylint = "^2.10.2"
black = "^21.8b0"
pytest = "^6.2.5"
chuy = "^1.3.0"

[tool.chuy]
format = "poetry run black ."
lint = "poetry run pylint chuy tests"
tests = "poetry run pytest"
package = "poetry build && poetry publish"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
